feature: add elements from swagger and generate api models
