# libs/api/models.ts
@@ -1,0 +1,4 @@
+export { CurrentAppointment } from './models/current-appointment';
+export { NewAppointent } from './models/new-appointent';
+export { NewUser } from './models/new-user';
+export { AuthUser } from './models/auth-user';
