# libs/api/models/new-user.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface NewUser {
+  email: string;
+  password: string;
+  role: Array<'ADMIN' | 'OPERATOR' | 'USER' | 'DISABLED'>;
+  username: string;
+}
